2006-05-27  Philip Langdale  <philipl@mail.utexas.edu>

	* README: Fix a typo and test svn commit.

2006-01-29  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: (main) (gphotofs_init).
	Implement --port support.

2006-01-12  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: (main) (gphotofs_init).
	Start adding support for relevant command line options.
	--speed and --model have been implemented while --port
	and --usbid are pending.

2006-01-12  Philip Langdale  <philipl@mail.utexas.edu>

	* po/POTFILES.in: Add this in preparation for
	localisation support.

2006-01-04  Philip Langdale  <philipl@mail.utexas.edu>

	* configure.ac
	* NEWS: 0.2 Release

2006-01-01  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c:
	(gpresultToErrno). Add the result codes from
	gphoto2-port-result.h
	(gphotofs_readdir). Fix rampant memory leak
	where the file list wasn't being freed.
	(gphotofs_read). Report errors.
	(gphotofs_release). Made a little more robust.

2005-12-30  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: (gphotofs_readdir) (gphotofs_getattr).
	Set the uid and gid of files to match those of the
	process. This is cosmetic as real access control is
	provided by the allow_other or allow_root options.

2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>

        * configure.ac
        * Makefile.am
        * NEWS
        * README: 0.1 Release

2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: (gphotofs_unlink). Test the result
	of the delete operation correctly.

2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>

	* gphotofs.c: Lots of stuff.
	- (struct OpenFile) (freeOpenFile) (gphotofs_open)
	  (gphotofs_release). Add a count for open files so
	  that they aren't closed too early.
	- (gpresultToErrno). Map libgphoto2 errors to errnos,
	  or at least try to. Prevents things going off the
	  deepend if there is an error.
        - (gphotofs_getattr). Don't go into an infinite loop