@@ -1,3 +1,9 @@
+2006-09-03  Philip Langdale  <philipl@alumni.utexas.net>
+
+	* gphotofs.c: (gphotofs_init).
+	Fix --model to actually work. I needed to load
+	the abilities list before it would be useful...
+
 2006-05-27  Philip Langdale  <philipl@mail.utexas.edu>
 
 	* README: Fix a typo and test svn commit.
